@@ -12,7 +12,8 @@
 	- Fixed: Some operations gave incorrect error messages in the Java implementation.
 	- Fixed: BadParameterException's class name was fixed. D'oh!
 	- Fixed: Some build shell scripts referred to an incorrect template path.
-	- Changed: StrFormat() now uses '{}' instead of '[]' for replace tokens.
+	- Changed: StrFormat() is now StrParam().
+	- Changed: StrParam() now uses '{}' instead of '[]' for replace tokens.
 
 
 0.9BETA18
